--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.1248.0",
     "body-parser": "^1.20.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
