--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "multer-s3-transform": "^2.10.3",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "pug": "2.0.0-beta11",
