--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "pug": "2.0.0-beta11",
-    "sequelize": "^6.25.3"
+    "sequelize": "^6.25.3",
+    "sharp": "^0.31.2"
   },
   "description": "기와집 서버 레포지토리 입니다.",
   "main": "server.js",
