--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "moment": "^2.29.4",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "multer-s3-transform": "^2.10.3",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
