--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "aws-sdk": "^2.1248.0",
     "body-parser": "^1.20.1",
+    "chalk": "^4.1.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
