--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "apple-auth": "^1.0.7",
     "aws-sdk": "^2.1248.0",
     "body-parser": "^1.20.1",
     "chalk": "^4.1.2",
