--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,4 @@ dist
 # End of https://www.toptal.com/developers/gitignore/api/node,macos
 config/db.config.js
 *.p8
+config/apple_auth.config.json
